@@ -12,7 +12,7 @@
  * expansions.  If the type is CP_LIST the value is a pointer to a
  * list of the elements.  */
 struct variable {
-    enum vt_types va_type;
+    enum cp_types va_type;
     char *va_name;
     union {
         bool vV_bool;
@@ -45,10 +45,10 @@ extern bool cp_echo;
 
 /* extern struct variable *variables; */
 wordlist * cp_varwl(struct variable *var);
-void cp_vset(char *varname, enum vt_types type, char *value);
+void cp_vset(char *varname, enum cp_types type, char *value);
 struct variable * cp_setparse(wordlist *wl);
 void cp_remvar(char *varname);
-bool cp_getvar(char *name, enum vt_types type, void *retval);
+bool cp_getvar(char *name, enum cp_types type, void *retval);
 wordlist * cp_variablesubst(wordlist *wlist);
 wordlist * vareval(char *string);
 void cp_vprint(void);
